--- a/Angular/a-web/src/index.html
+++ b/Angular/a-web/src/index.html
@@ -7,8 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <link rel="stylesheet" href="assets/MisEstilos.css">
 
+  <link rel="stylesheet" href="assets/Bootstrap/css/bootstrap.min.css">
+
 </head>
-<twj-raiz>Cargando...</twj-raiz>
+<body>
+<app-prueba1> Cargando :) </app-prueba1>
+</body>
 </html>
